[tool.poetry]
name = "unittest-proj"
version = "0.1.0"
description = ""
authors = ["good_chemist <iolgasergeevna@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
coverage = "7.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
